--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,3 +55,23 @@
     /* Safari, Android, iOS */ url("/fonts/inter-v11-latin-700.svg#Inter")
       format("svg"); /* Legacy iOS */
 }
+
+/* Style for pdf viewer */
+.document-container .react-pdf__Document {
+}
+
+.document-container .react-pdf__page {
+  max-width: calc(100% - 2em);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  margin: 1em;
+}
+
+.document-container .react-pdf__Page__canvas {
+  max-width: 100%;
+  height: 100% !important;
+  overflow: hidden;
+}
+
+.document-container .react-pdf__message--no-data {
+  display: none;
+}
